# store-api

./: .env  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
local/: .env  .env.example  Dockerfile  requirements.txt
migrations/models/: 0_20240709105851_init.py
src/: Dockerfile  main.py  router.py
src/core/: auth.py  config.py  logger.py  pagination.py
src/db/: tortoise.py
src/db/models/: users.py
src/sales/: manager.py  schemas.py  utils.py
src/sales/models/: __init__.py  orders.py  products.py
src/sales/routes/: __init__.py  orders.py  products.py
src/system/: routes.py
src/users/: manager.py  models.py  routes.py  tasks.py
